--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/leaflet": "^1.9.14",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.4",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.454.0",
     "moment": "^2.30.1",
