--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
+    "geolib": "^3.3.4",
+    "i": "^0.3.7",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.454.0",
     "moment": "^2.30.1",
