--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "temp-sipiar-admin",
   "private": true,
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
