--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,11 @@
                         "src": "/[^.]+",
                         "dest": "/",
                         "status": 200
-                }
+                },
+                {
+                        "src": "/dashboard",
+                        "dest": "/dashboard",
+                        "status": 200
+                    }
         ]
 }
