--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,9 @@
 {
         "routes": [
-                {
-                        "src": "/[^.]+",
-                        "dest": "/",
-                        "status": 200
-                },
-                {
-                        "src": "/dashboard",
-                        "dest": "/dashboard",
-                        "status": 200
-                    }
+          {
+            "src": "/.*",
+            "dest": "/index.html"
+          }
         ]
-}
+      }
+      
