--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,7 @@
 {
-        "routes": [
-          {
-            "src": "/.*",
-            "dest": "/index.html"
-          }
+        "cleanUrls": true,
+        "rewrites": [
+          { "source": "/(.*)", "destination": "/" }
         ]
       }
       
