--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,9 @@
 {
-        "cleanUrls": true,
-        "rewrites": [
-          { "source": "/(.*)", "destination": "/" }
+        "routes": [
+                {
+                        "src": "/[^.]+",
+                        "dest": "/",
+                        "status": 200
+                }
         ]
-      }
-      
+}
